--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Feedback Form</h2>
+	<form method="post">
+		<label for="name">Name</label><br>
+		<input type="text" id="name" name="fname" minlength="3" maxlength="50" required><br>
+		<label for="portfolio">Portfolio</label><br>
+		<input type="url" id="portfolio" name="port" required><br>
+		<label for="name">Favorite Color</label><br>
+		<input type="text" id="favColor" name="fcolor"><br>
+		<label for="name">Likeness</label><br>
+		<input type="range" id="likeness" name="likeness" min="1" max="100">
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
