--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 	<h2>Feedback Form</h2>
 	<form method="post">
 		<label for="name">Name</label><br>
-		<input type="text" id="name" name="fname" minlength="3" maxlength="50" required><br>
+		<input type="text" id="name" name="name" minlength="3" maxlength="50" required><br>
 		<label for="portfolio">Portfolio</label><br>
-		<input type="url" id="portfolio" name="port" required><br>
-		<label for="name">Favorite Color</label><br>
-		<input type="text" id="favColor" name="fcolor"><br>
-		<label for="name">Likeness</label><br>
-		<input type="range" id="likeness" name="likeness" min="1" max="100">
+		<input type="url" id="portfolio" name="portfolio" required><br>
+		<label for="favColor">Favorite Color</label><br>
+		<input type="color" id="favColor" name="favColor"><br>
+		<label for="Likeness">Likeness</label><br>
+		<input type="range" id="Likeness" name="Likeness" min="1" max="100">
 		
 	</form>
     <script type="text/javascript" src="./script.js">
