--- a/main.html
+++ b/main.html
@@ -14,10 +14,10 @@
 		<input type="text" id="name" name="name" minlength="3" maxlength="50" required><br>
 		<label for="portfolio">Portfolio</label><br>
 		<input type="url" id="portfolio" name="portfolio" required><br>
-		<label for="favColor">Favorite Color</label><br>
-		<input type="color" id="favColor" name="favColor"><br>
-		<label for="Likeness">Likeness</label><br>
-		<input type="range" id="Likeness" name="Likeness" min="1" max="100">
+		<label for="fcolor">Favorite Color</label><br>
+		<input type="color" id="favColor" name="fcolor"><br>
+		<label for="like">Likeness</label><br>
+		<input type="range" id="likeness" name="like" min="1" max="100">
 		
 	</form>
     <script type="text/javascript" src="./script.js">
