--- a/main.html
+++ b/main.html
@@ -8,16 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2>Feedback Form</h2>
 	<form method="post">
+	<h2>Feedback Form</h2>
 		<label for="name">Name</label><br>
 		<input type="text" id="name" name="name" minlength="3" maxlength="50" required><br>
 		<label for="portfolio">Portfolio</label><br>
-		<input type="url" id="portfolio" name="portfolio" required><br>
-		<label for="fcolor">Favorite Color</label><br>
-		<input type="color" id="favColor" name="fcolor"><br>
-		<label for="like">Likeness</label><br>
-		<input type="range" id="likeness" name="like" min="1" max="100">
+		<input type="URL" id="portfolio" name="portfolio" required><br>
+		<label for="favColor">Favorite Color</label><br>
+		<input type="color" id="favColor" name="favColor"><br>
+		<label for="likeness">Likeness</label><br>
+		<input type="range" id="likeness" name="likeness" min="1" max="100">
 		
 	</form>
     <script type="text/javascript" src="./script.js">
